:lipstick: fix overlapping labels

--- a/styles/graphic.sass
+++ b/styles/graphic.sass
@@ -74,17 +74,17 @@
       position: absolute
       transition: opacity 0.3s
       z-index: 2
+      transform: translateY(-12px)
 
       span
         position: relative
-        margin-top: -43px
         left: -50%
         padding: 5px 15px
         color: white
         display: block
         text-align: center
         line-height: 16px
-        white-space: nowrap
+        white-space: pre
         font-weight: bold
 
       &.edge-left span
@@ -116,6 +116,9 @@
           background-color: $color-m
         &:after
           border-top-color: $color-m
+
+      &:not(.label-user) span
+        box-shadow: 0px 0px 5px 0 rgba(0,0,0,0.75)
 
       &.your-result
         position: absolute
